--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "",
-    "dev:server": "cd client && npm run dev",
-    "dev:client": "cd server && flask run",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && flask run",
     "build": "mkdir dist && cp -r server/* dist/ && npm run build:client && cp -r client/dist/* dist/static/",
     "build:client": "cd client && npm run build"
   }
