--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev",
     "dev": "concurrently -n \"CLIENT,SERVER\" \"npm:dev:client\" \"npm:dev:server\"",
     "dev:client": "cd client && npm run dev",
-    "dev:server": "cd server && flask run --debug",
+    "dev:server": "cd server && python app.py",
     "build": "mkdir dist && cp -r server/* dist/ && npm run build:client && cp -r client/dist/* dist/static/",
     "build:client": "cd client && npm run build"
   },
