--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,8 +1,4 @@
-DB_USER =
-DB_PASS =
-DB_HOST =
-DB_PORT =
-DB_NAME =
+MONGO_URI=mongodb+srv://<user>:<password>@<domain.tld>/<db_name>
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
