--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,10 +4,11 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.5
+dnspython==2.6.1
 Flask==3.0.2
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
+Flask-PyMongo==2.3.0
 greenlet==3.0.3
 idna==3.6
 itsdangerous==2.1.2
@@ -15,10 +16,10 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 oauthlib==3.2.2
 pycparser==2.21
+pymongo==4.6.2
 pyOpenSSL==24.1.0
 python-dotenv==1.0.1
 requests==2.31.0
-SQLAlchemy==2.0.28
 typing_extensions==4.10.0
 urllib3==2.2.1
 Werkzeug==3.0.1
