login redirect in dev environment

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,4 +1,4 @@
+URL=https://<your_domain.tld>
 MONGO_URI=mongodb+srv://<user>:<password>@<domain.tld>/<db_name>
-
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
