--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.6.0
 anyio==4.3.0
+bson==0.5.10
 certifi==2024.2.2
 distro==1.9.0
+dnspython==2.6.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -10,6 +12,9 @@ openai==1.17.1
 pinecone-client==3.2.2
 pydantic==2.7.0
 pydantic_core==2.18.1
+pymongo==4.6.3
+python-dateutil==2.9.0.post0
+six==1.16.0
 sniffio==1.3.1
 tqdm==4.66.2
 typing_extensions==4.11.0
