--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,12 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^11.0.6",
+    "install": "^0.13.0",
+    "npm": "^10.5.2",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
