--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,21 +1,39 @@
 annotated-types==0.6.0
 anyio==4.3.0
+blinker==1.7.0
 bson==0.5.10
 certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==42.0.5
 distro==1.9.0
 dnspython==2.6.1
+Flask==3.0.3
+Flask-Cors==4.0.0
+Flask-Login==0.6.3
+Flask-PyMongo==2.3.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+oauthlib==3.2.2
 openai==1.17.1
 pinecone-client==3.2.2
+pycparser==2.22
 pydantic==2.7.0
 pydantic_core==2.18.1
 pymongo==4.6.3
+pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.1
 tqdm==4.66.2
 typing_extensions==4.11.0
 urllib3==2.2.1
+Werkzeug==3.0.2
