update env sample

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,4 +1,10 @@
 URL=https://<your_domain.tld>
-MONGO_URI=mongodb+srv://<user>:<password>@<domain.tld>/<db_name>
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+
+PINECONE_KEY=<pinecone_key>
+OPENAI_KEY=<openai_key>
+
+MONGO_URI=mongodb+srv://<user>:<password>@<domain.tld>
+DATABASE_NAME=<db_name>
+
+GOOGLE_CLIENT_ID=<google_client_id>
+GOOGLE_CLIENT_SECRET=<google_client_secret>
