pinecone index env var

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,10 +1,12 @@
 URL=https://<your_domain.tld>
 
-PINECONE_KEY=<pinecone_key>
 OPENAI_KEY=<openai_key>
 
+PINECONE_KEY=<pinecone_key>
+PINECONE_INDEX=campusconnect
+
 MONGO_URI=mongodb+srv://<user>:<password>@<domain.tld>
-DATABASE_NAME=<db_name>
+DATABASE_NAME=campusconnect
 
 GOOGLE_CLIENT_ID=<google_client_id>
 GOOGLE_CLIENT_SECRET=<google_client_secret>
