Added Edit Profile Button

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "devDependencies": {
     "@types/node": "^20.11.20",
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "react-router-dom": "^6.23.0"
   }
 }
